--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "my learnings",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "mern"
@@ -12,6 +13,8 @@
   "author": "shankaresh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4",
+    "uuid": "^10.0.0"
   }
 }
