--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,10 @@
   "author": "shankaresh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "mongodb": "^6.8.0",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
   }
