--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,10 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
-    "mongodb": "^6.8.0",
-    "nodemon": "^3.1.4",
+    "mongoose": "^8.5.2",
+    "mongoose-unique-validator": "^5.0.1",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
