--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "fav_spot",
+  "name": "backend",
   "version": "1.0.0",
   "description": "my learnings",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [
     "mern"
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "mongoose-unique-validator": "^5.0.1",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
