--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -13,9 +13,13 @@
 
 # misc
 .DS_Store
+.env
 .env.local
+.env.development
 .env.development.local
+.env.test
 .env.test.local
+.env.production
 .env.production.local
 
 npm-debug.log*
@@ -24,4 +28,3 @@ yarn-error.log*
 
 package-lock.json
 yarn.lock
-.env
